[gd_scene load_steps=71 format=2]

[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_40.png" type="Texture" id=1]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_34.png" type="Texture" id=2]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_09.png" type="Texture" id=3]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_38.png" type="Texture" id=4]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_11.png" type="Texture" id=5]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_12.png" type="Texture" id=6]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_06.png" type="Texture" id=7]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_48.png" type="Texture" id=8]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_53.png" type="Texture" id=9]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_24.png" type="Texture" id=10]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_35.png" type="Texture" id=11]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_27.png" type="Texture" id=12]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_00.png" type="Texture" id=13]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_01.png" type="Texture" id=14]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_04.png" type="Texture" id=15]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_26.png" type="Texture" id=16]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_54.png" type="Texture" id=17]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_50.png" type="Texture" id=18]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_51.png" type="Texture" id=19]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_44.png" type="Texture" id=20]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_56.png" type="Texture" id=21]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_39.png" type="Texture" id=22]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_16.png" type="Texture" id=23]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_49.png" type="Texture" id=24]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_08.png" type="Texture" id=25]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_28.png" type="Texture" id=26]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_23.png" type="Texture" id=27]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_33.png" type="Texture" id=28]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_10.png" type="Texture" id=29]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_15.png" type="Texture" id=30]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_05.png" type="Texture" id=31]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_20.png" type="Texture" id=32]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_25.png" type="Texture" id=33]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_21.png" type="Texture" id=34]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_03.png" type="Texture" id=35]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_31.png" type="Texture" id=36]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_30.png" type="Texture" id=37]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_46.png" type="Texture" id=38]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_07.png" type="Texture" id=39]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_52.png" type="Texture" id=40]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_22.png" type="Texture" id=41]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_55.png" type="Texture" id=42]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_18.png" type="Texture" id=43]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_02.png" type="Texture" id=44]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_29.png" type="Texture" id=45]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_13.png" type="Texture" id=46]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_58.png" type="Texture" id=47]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_41.png" type="Texture" id=48]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_43.png" type="Texture" id=49]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_37.png" type="Texture" id=50]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_36.png" type="Texture" id=51]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_42.png" type="Texture" id=52]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_32.png" type="Texture" id=53]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_19.png" type="Texture" id=54]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_57.png" type="Texture" id=55]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_14.png" type="Texture" id=56]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_17.png" type="Texture" id=57]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_47.png" type="Texture" id=58]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_45.png" type="Texture" id=59]
[ext_resource path="res://external/pfxd/medium_enemy/aseprite_frames/menemy_59.png" type="Texture" id=60]
[ext_resource path="res://enemy/small_red_enemy.gd" type="Script" id=61]
[ext_resource path="res://addons/aggro/aggro.gd" type="Script" id=62]
[ext_resource path="res://addons/movement/top_down_movement.gd" type="Script" id=63]
[ext_resource path="res://external/aseprite/enemy_health_ui_00.png" type="Texture" id=64]
[ext_resource path="res://external/aseprite/enemy_health_ui_01.png" type="Texture" id=65]
[ext_resource path="res://external/sunvox/ouch.wav" type="AudioStream" id=126]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 30.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 44 ), ExtResource( 35 ), ExtResource( 15 ), ExtResource( 31 ), ExtResource( 7 ), ExtResource( 39 ), ExtResource( 25 ), ExtResource( 3 ), ExtResource( 29 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 46 ), ExtResource( 56 ), ExtResource( 30 ), ExtResource( 23 ), ExtResource( 57 ), ExtResource( 43 ), ExtResource( 54 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 41 ), ExtResource( 27 ), ExtResource( 10 ), ExtResource( 33 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 26 ), ExtResource( 45 ), ExtResource( 37 ), ExtResource( 36 ), ExtResource( 53 ), ExtResource( 28 ), ExtResource( 2 ), ExtResource( 11 ), ExtResource( 51 ), ExtResource( 50 ), ExtResource( 4 ), ExtResource( 22 ), ExtResource( 1 ), ExtResource( 48 ), ExtResource( 52 ), ExtResource( 49 ), ExtResource( 20 ), ExtResource( 59 ), ExtResource( 38 ), ExtResource( 58 ), ExtResource( 8 ), ExtResource( 24 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 40 ), ExtResource( 9 ), ExtResource( 17 ), ExtResource( 42 ), ExtResource( 21 ), ExtResource( 55 ), ExtResource( 47 ), ExtResource( 60 ) ],
"loop": true,
"name": "default",
"speed": 60.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 600.0

[node name="medium_enemy" type="RigidBody2D"]
collision_layer = 4
collision_mask = 15
mode = 2
physics_material_override = SubResource( 1 )
linear_damp = 5.0
script = ExtResource( 61 )
max_health = 20
striking_distance = 100
sword_offset = 27

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
position = Vector2( 0, -9 )
shape = SubResource( 2 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -9 )
scale = Vector2( 3, 3 )
frames = SubResource( 3 )

[node name="aggro" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 10
script = ExtResource( 62 )
raycast_path = NodePath("../aggro_raycast")

[node name="collision_shape_2d" type="CollisionShape2D" parent="aggro"]
shape = SubResource( 4 )

[node name="aggro_raycast" type="RayCast2D" parent="."]
enabled = true
collision_mask = 11

[node name="movement" type="Node" parent="."]
script = ExtResource( 63 )
body_path = NodePath("..")
direction_path = NodePath("..")
acceleration = 550.0
default_max_speed = 1000.0

[node name="health_hud" type="TextureProgress" parent="."]
margin_left = -18.0
margin_top = -51.0
margin_right = 18.0
margin_bottom = -42.0
max_value = 10.0
value = 10.0
texture_under = ExtResource( 64 )
texture_progress = ExtResource( 65 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack_cooldown" type="Timer" parent="."]
one_shot = true

[node name="ouch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 126 )
volume_db = 2.0
max_distance = 500.0
attenuation = 5.0
[connection signal="aggro" from="aggro" to="." method="_on_aggro_aggro"]
[connection signal="aggro_lost" from="aggro" to="." method="_on_aggro_aggro_lost"]
